--- a/http-pod.yaml
+++ b/http-pod.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: httpd
+  name: httpd-server
   labels:
     app: httpd
 spec:
   ports:
-    - nodePort: 80
-      port: 80
+    - port: 80
       protocol: TCP
       targetPort: 80
   selector:
